; ModuleID = '/home/carl/AnghaBench/sqlcipher/ext/fts3/tool/extr_fts3view.c_showSegment.c'
source_filename = "/home/carl/AnghaBench/sqlcipher/ext/fts3/tool/extr_fts3view.c_showSegment.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@azExtra = common dso_local global i8** null, align 8
@SQLITE_ROW = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [30 x i8] c"Segment %s of size %d bytes:\0A\00", align 1
@.str.1 = private unnamed_addr constant [4 x i8] c"raw\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i8*)* @showSegment to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @showSegment(i32* %0, i8* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  store i8* %1, i8** %4, align 8
  %8 = load i32*, i32** %3, align 8
  %9 = load i8*, i8** %4, align 8
  %10 = load i8**, i8*** @azExtra, align 8
  %11 = getelementptr inbounds i8*, i8** %10, i64 0
  %12 = load i8*, i8** %11, align 8
  %13 = call i32* @prepareToGetSegment(i32* %8, i8* %9, i8* %12)
  store i32* %13, i32** %7, align 8
  %14 = load i32*, i32** %7, align 8
  %15 = call i64 @sqlite3_step(i32* %14)
  %16 = load i64, i64* @SQLITE_ROW, align 8
  %17 = icmp ne i64 %15, %16
  br i1 %17, label %18, label %21

18:                                               ; preds = %2
  %19 = load i32*, i32** %7, align 8
  %20 = call i32 @sqlite3_finalize(i32* %19)
  br label %44

21:                                               ; preds = %2
  %22 = load i32*, i32** %7, align 8
  %23 = call i32 @sqlite3_column_bytes(i32* %22, i32 0)
  store i32 %23, i32* %6, align 4
  %24 = load i32*, i32** %7, align 8
  %25 = call i8* @sqlite3_column_blob(i32* %24, i32 0)
  store i8* %25, i8** %5, align 8
  %26 = load i8**, i8*** @azExtra, align 8
  %27 = getelementptr inbounds i8*, i8** %26, i64 0
  %28 = load i8*, i8** %27, align 8
  %29 = load i32, i32* %6, align 4
  %30 = call i32 @printf(i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str, i64 0, i64 0), i8* %28, i32 %29)
  %31 = call i64 @findOption(i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.1, i64 0, i64 0), i32 0, i32 0)
  %32 = icmp ne i64 %31, 0
  br i1 %32, label %33, label %37

33:                                               ; preds = %21
  %34 = load i8*, i8** %5, align 8
  %35 = load i32, i32* %6, align 4
  %36 = call i32 @printBlob(i8* %34, i32 %35)
  br label %41

37:                                               ; preds = %21
  %38 = load i8*, i8** %5, align 8
  %39 = load i32, i32* %6, align 4
  %40 = call i32 @decodeSegment(i8* %38, i32 %39)
  br label %41

41:                                               ; preds = %37, %33
  %42 = load i32*, i32** %7, align 8
  %43 = call i32 @sqlite3_finalize(i32* %42)
  br label %44

44:                                               ; preds = %41, %18
  ret void
}

declare dso_local i32* @prepareToGetSegment(i32*, i8*, i8*) #1

declare dso_local i64 @sqlite3_step(i32*) #1

declare dso_local i32 @sqlite3_finalize(i32*) #1

declare dso_local i32 @sqlite3_column_bytes(i32*, i32) #1

declare dso_local i8* @sqlite3_column_blob(i32*, i32) #1

declare dso_local i32 @printf(i8*, i8*, i32) #1

declare dso_local i64 @findOption(i8*, i32, i32) #1

declare dso_local i32 @printBlob(i8*, i32) #1

declare dso_local i32 @decodeSegment(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
